--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     margin: 1rem 4rem;
     color: white;
+    background-color: transparent;
 }
 
 .navbar__list ul{
