--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -11,6 +11,8 @@
     display: flex;
     list-style: none;
     justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
 }
 
 .navbar__list li:hover {
