--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -8,3 +8,11 @@
 .video-background video {
     width: 100%;
 }
+
+.main-text {
+    position: absolute;
+    top: 200px;
+    left: 100px;
+    font-size: 3rem;
+    background-color: transparent;
+}
