--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,8 +1,8 @@
 .navbar {
-    height: 0.9rem;
+    width: 100%;
+    height: 2rem;
     display: flex;
     justify-content: space-between;
-    margin: 1rem 4rem;
     color: white;
     background-color: transparent;
 }
@@ -13,7 +13,7 @@
     list-style: none;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 0px;
 }
 
 .navbar__list li:hover {
@@ -27,6 +27,7 @@
     font-size: 2rem;
     width: 10rem;
     justify-content: space-between;
+    
 }
 
 .navbar__icons li:hover {
