moveded the navbar down

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,6 +5,8 @@
     justify-content: space-between;
     color: white;
     background-color: transparent;
+    position: relative;
+    top: 1rem;
 }
 
 .navbar__list ul{
