--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,6 +9,10 @@
     top: 1rem;
 }
 
+.navbar h1 {
+    margin-left: 1rem;
+}
+
 .navbar__list ul{
     width: 20rem;
     display: flex;
@@ -29,6 +33,7 @@
     font-size: 2rem;
     width: 10rem;
     justify-content: space-between;
+    margin-right: 2rem;
     
 }
 
