--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -4,8 +4,13 @@
     margin: 0;
     padding: 0;
     position: relative;
-    top: -70px;
+    top: -20px;
     z-index: -1;
+}
+.hand-emoiji {
+    font-size: 3rem;
+    position: relative;
+    top: -4rem;
 }
 
 .video-background video {
