change position to absolute

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     color: white;
     background-color: transparent;
-    position: relative;
+    position: absolute;
     top: 1rem;
 }
 
