--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -4,11 +4,11 @@
   padding-top: 5rem;
   color: white;
   position: relative;
-  top:-3rem;
+  top: -3rem;
 }
 
 .projects__wrapper {
-    margin: 0rem 2rem;
+  margin: 0rem 2rem;
 }
 
 .projects h1 {
@@ -20,27 +20,32 @@
 }
 
 .barplay {
-    display: flex;
+  display: flex;
+}
+
+.barplay a {
+  width: 50%;
 }
 
 .barplay_img {
-  width: 80%;
+  width: 100%;
   cursor: pointer;
   border-radius: 20px;
-  border: solid 2px white ;
+  border: solid 2px white;
 }
 
 .barplay_img:hover {
-    border: solid 4px red
+  border: solid 2px aqua;
 }
 
 .barplay_text {
-    width: 50%;
+  width: 50%;
+
 }
 
 .barplay_text h3 {
-    color: white;
-    text-align: center;
-    font-size: 3rem;
-    margin-bottom: 2rem;
+  color: white;
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 2rem;
 }
