--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -2,13 +2,14 @@
   background: black;
   margin-top: -2rem;
   padding-top: 5rem;
+  padding-bottom: 5rem;
   color: white;
   position: relative;
   top: -3rem;
 }
 
 .projects__wrapper {
-  margin: 0rem 2rem;
+  margin: 1rem 5rem;
 }
 
 .projects h1 {
@@ -40,12 +41,36 @@
 
 .barplay_text {
   width: 50%;
-
+  margin-left: 3rem;
+  border-radius: 10px;
 }
 
 .barplay_text h3 {
-  color: white;
+  color: rgb(109, 199, 230);
   text-align: center;
   font-size: 3rem;
   margin-bottom: 2rem;
+}
+
+.barplay_text p {
+  width: 80%;
+  margin-left: 5rem;
+}
+.barplay_btns {
+text-align: center;
+}
+
+.barplay_btns button {
+  font-size:  16px;
+  font-weight: 700;
+  color: white;
+  background-color: rgb(109, 199, 230);
+  height: 3rem;
+  width: 8rem;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  border-radius: 20px;
+  cursor: pointer;
+
 }
