--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -55,8 +55,9 @@
 }
 
 .allProjects_text p {
-  width: 80%;
-  margin-left: 5rem;
+  width: 50%;
+  margin-left: 10rem;
+  text-align: center;
 }
 .allProjects_btns {
 text-align: center;
