--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -54,7 +54,7 @@
 
 .allProjects_text p {
   width: 50%;
-  margin-left: 10rem;
+  margin-left: 15rem;
   text-align: center;
 }
 .allProjects_btns {
@@ -75,3 +75,10 @@ text-align: center;
   cursor: pointer;
 
 }
+
+@media screen and (max-width: 1800px) {
+  .allProjects_text p {
+    margin-left: 13rem;
+  }
+}
+
