--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -13,6 +13,7 @@
 
 .video-background video {
     width: 100%;
+    margin-top: -1.2rem;
 }
 
 .main-text {
@@ -21,4 +22,10 @@
     left: 100px;
     font-size: 4.5rem;
     background-color: transparent;
+}
+
+@media screen and (max-width: 1250px) {
+    .main {
+        top: -40px;
+    }
 }
