--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -49,11 +49,22 @@
   margin-top: 2px;
 }
 
+/* ----smallscreen---------- */
+
 .navbar__smallscreen {
   display: none;
 }
 
-/* ----smallscreen---------- */
+.navbar__smallscreen-hamburger {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem 1rem;
+}
+
+.hamburger { 
+  cursor: pointer;
+}
 
 @media screen and (max-width: 1250px) {
   .navbar__bigscreen {
