--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,43 +1,49 @@
-
 .main {
-    color: white;
-    position: relative;
-    top: -20px;
-    z-index: -1;
+  color: white;
+  position: relative;
+  top: -20px;
+  z-index: -1;
 }
 .hand-emoiji {
-    font-size: 3rem;
-    position: relative;
-    top: -4rem;
+  font-size: 3rem;
+  position: relative;
+  top: -4rem;
 }
 
 .video-background video {
-    width: 100%;
-    margin-top: -1.2rem;
+  width: 100%;
+  margin-top: -1.2rem;
 }
 
 .main-text {
-    position: absolute;
-    top: 200px;
-    left: 100px;
-    font-size: 4.5rem;
-    background-color: transparent;
+  position: absolute;
+  top: 200px;
+  left: 100px;
+  font-size: 4.5rem;
+  background-color: transparent;
 }
 
 @media screen and (max-width: 1250px) {
-    .main {
-        top: -68px;
-    }
+  .main {
+    top: -68px;
+  }
 }
 
 @media screen and (max-width: 1150px) {
-    .main-text {
-        font-size: 4rem;
-    }
+  .main-text {
+    font-size: 4rem;
+  }
 }
 
 @media screen and (max-width: 1050px) {
-    .main-text {
-        font-size: 3rem;
-    }
+  .main-text {
+    font-size: 3rem;
+  }
+
+  .video-background {
+    overflow: hidden;
+  }
+  .video-background video {
+    width: 150%;
+  }
 }
