--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -85,6 +85,30 @@
   width: 45%;
 }
 
+.Ctn-Btn {
+  height: 7rem;
+  width: 100%;
+  align-items: center;
+  cursor: pointer;
+  font-weight: 800;
+  margin-top: 1rem;
+  font-size: 3rem;
+  padding: 1rem;
+  background-color: rgb(109, 199, 230);
+  color: white;
+  border-radius: 20px;
+}
+
+.Ctn-Btn a {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 10px;
+  color: white;
+  font-size: 54px;
+}
+
 @media screen and (max-width: 1800px) {
   .allProjects_text {
     width: 50%;
@@ -181,4 +205,9 @@
   .allProjects_text p {
     padding: 0;
   }
+  .Ctn-Btn {
+    margin-left: 1rem;
+    height: 10rem;
+  }
+
 }
