--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -213,5 +213,8 @@ button .projects_in-btn {
     margin-left: 1rem;
     height: 10rem;
   }
-
+  #projects_PT {
+    margin-left: -1rem;
+    font-size: 34px;
+  }
 }
